// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button isWaiting state matches snapshot 1`] = `
<button
  className="button-base"
  disabled={true}
  style={
    Object {
      "--button-bg": "#D4450C",
      "--button-bg-active": "#b03808",
      "--button-bg-hover": "#be3c08",
      "--button-color": "#ffffff",
      "--button-font-weight": 700,
      "--button-outline": "#ffffff",
      "--button-shadow": "#000000",
    }
  }
>
  Submitting...
</button>
`;

exports[`Button matches light color snapshot 1`] = `
<button
  className="button-base"
  style={
    Object {
      "--button-bg": "#ffffff",
      "--button-bg-active": "#e5e5e5",
      "--button-bg-hover": "#ffffff",
      "--button-color": "#424242",
      "--button-font-weight": 400,
      "--button-outline": "#ffffff",
      "--button-shadow": "#000000",
    }
  }
>
  Click Me
</button>
`;

exports[`Button matches snapshot 1`] = `
<button
  className="button-base"
  style={
    Object {
      "--button-bg": "#D4450C",
      "--button-bg-active": "#b03808",
      "--button-bg-hover": "#be3c08",
      "--button-color": "#ffffff",
      "--button-font-weight": 700,
      "--button-outline": "#ffffff",
      "--button-shadow": "#000000",
    }
  }
>
  Click Me
</button>
`;

exports[`Button renders as a tag 1`] = `
<a
  className="button-base"
  style={
    Object {
      "--button-bg": "#D4450C",
      "--button-bg-active": "#b03808",
      "--button-bg-hover": "#be3c08",
      "--button-color": "#ffffff",
      "--button-font-weight": 700,
      "--button-outline": "#ffffff",
      "--button-shadow": "#000000",
    }
  }
>
  Click Me
</a>
`;

exports[`Button renders as a tag variant 1`] = `
<a
  className="button-base"
  style={
    Object {
      "--button-bg": "#ffffff",
      "--button-bg-active": "#e5e5e5",
      "--button-bg-hover": "#ffffff",
      "--button-color": "#424242",
      "--button-font-weight": 400,
      "--button-outline": "#ffffff",
      "--button-shadow": "#000000",
    }
  }
>
  Click Me
</a>
`;

exports[`Button renders button that looks like a link 1`] = `
<button
  className="button-link"
  style={
    Object {
      "--link-color": "#026AA1",
      "--link-hover-color": "#005481",
    }
  }
>
  Click Me
</button>
`;

exports[`Button renders plain button 1`] = `
<button
  className="plain-button"
>
  Click Me
</button>
`;
